feat: Add comprehensive linting setup
Major improvements to code quality checks:

1. Created separate lint.yml workflow with parallel jobs:
   - ansible-lint (without || true so it actually fails)
   - yamllint for YAML files
   - Python linting (ruff, black, mypy)
   - shellcheck for all shell scripts
   - Security scanning (bandit, safety)

2. Added linter configurations:
   - .yamllint - YAML style rules
   - pyproject.toml - Python tool configs (ruff, black, mypy)
   - Updated .ansible-lint with better rules

3. Improved main.yml workflow:
   - Renamed 'lint' to 'syntax-check' for clarity
   - Removed redundant linting (moved to lint.yml)

4. Added documentation:
   - docs/linting.md explains all linters and how to use them

Current linters are set to warn (|| true) to allow gradual adoption.
As code improves, these can be changed to hard failures.

Benefits:
- Catches Python security issues
- Enforces consistent code style
- Validates all shell scripts (not just 2)
- Checks YAML formatting
- Separates linting from testing concerns

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,8 @@ permissions:
   contents: read
 
 jobs:
-  lint:
-    name: Lint code
+  syntax-check:
+    name: Ansible syntax check
     runs-on: ubuntu-22.04
     permissions:
       contents: read
@@ -24,15 +24,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install ansible-lint
-          # Install shellcheck from apt (faster than snap)
-          sudo apt-get update && sudo apt-get install -y shellcheck
 
-      - name: Run linters
-        run: |
-          shellcheck algo install.sh
-          ansible-playbook main.yml --syntax-check
-          ansible-lint -x experimental,package-latest,unnamed-task -v *.yml roles/{local,cloud-*}/*/*.yml || true
+      - name: Check Ansible playbook syntax
+        run: ansible-playbook main.yml --syntax-check
 
   basic-tests:
     name: Basic sanity tests
