chore: Update dependencies for security and stability
- Update Ansible from 9.1.0 to 9.13.0 (latest in 9.x series)
- CRITICAL: Update Jinja2 to >=3.1.6 to fix CVE-2025-27516 (arbitrary code execution)
- Pin netaddr to 1.3.0
- Add version constraints to all Ansible collections to prevent breaking changes
- All updates tested and syntax checks pass

Security Note: The Jinja2 update addresses a critical vulnerability that could
allow arbitrary Python code execution in sandboxed environments.

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,6 +1,10 @@
 ---
 collections:
   - name: ansible.posix
+    version: ">=1.5.4,<2.0"
   - name: community.general
+    version: ">=8.1.0,<9.0"
   - name: community.crypto
+    version: ">=2.16.1,<3.0"
   - name: openstack.cloud
+    version: ">=2.2.0,<3.0"
